Fix image z-index

--- a/css/img.css
+++ b/css/img.css
@@ -1,9 +1,10 @@
 img {
     margin-inline-end: 10px;
-    max-width: 16vw;
+    max-width: 19vw;
     height: var(--imgHeight);
     display: inline;
     transition: 1s;
+    z-index: 1;
 }
 
 .images {
